re #128: Fixed broken UI of com_media after template changes

--- a/code/media/com_media/css/mediamanager.css
+++ b/code/media/com_media/css/mediamanager.css
@@ -15,14 +15,15 @@
  * @since		1.5
  * @version    1.0
  */
+#content-box {
+	overflow-y: scroll;
+} 
+
 #left {
-	width: 15% !important;
-	float: left;
+	width: 200px !important;
 }
 #right { 
-	width: 85% !important;
 	border-left: 1px solid #E1E1E1;
-	float: left;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -32,10 +33,6 @@
 	overflow: auto;
 	/*height: 390px;*/
 	border: 0;
-}
-
-#folderview {
-
 }
 
 #folderview .path {
